# zed-dockerfile-linter

./: .gitignore  Cargo.toml  LICENSE  README.md  extension.toml
.github/workflows/: release.yml
lsp/: Cargo.toml  README.md
lsp/src/: main.rs
src/: lib.rs
