[package]
name = "hadolint-lsp"
version = "0.1.0"
edition = "2021"
license = "MIT"
description = "An LSP server that wraps hadolint to lint Dockerfiles."
repository = "https://github.com/abderrahimghazali/zed-dockerfile-linter"

[[bin]]
name = "hadolint-lsp"
path = "src/main.rs"

[dependencies]
tokio = { version = "1", features = ["macros", "rt-multi-thread", "io-std", "io-util", "process", "fs", "sync"] }
tower-lsp = "0.20"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
ureq = "2"
dirs = "5"
which = "6"

[profile.release]
lto = true
strip = true
codegen-units = 1
